--- a/src/Assets/SCSS/vars.scss
+++ b/src/Assets/SCSS/vars.scss
@@ -1,15 +1,16 @@
 /* IMPORT FONTS HERE*/
-
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
 
 /* FONTS */
-$font-family: arial;
+$font-family: 'Titillium Web', sans-serif;;
 
 
 /* COLORS */
-$primaryColor: red;
-$secondaryColor: Blue;
-$highlight: green;
-$themeColor: yellow;
+$primaryColor: #AD7A51;
+$secondaryColor: #30454C;
+$highlightOne: #D39D5B;
+$highlightTwo: #406a77;
+
 $background: black;
 
 
