Styling + ændringer i struktur

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,3 +11,9 @@
 h1{
     font-family: 'Playfair Display', serif;
 }
+
+body{
+    margin-inline: 10%;
+    font-family: $font-family;
+    color: #707070;
+}
