--- a/src/components/Partials/Form/Form.scss
+++ b/src/components/Partials/Form/Form.scss
@@ -1,6 +1,10 @@
 #SeatSeaction{
-    .line1{
-        background-color: #000;
-        // position: absolute;
+    display: flex;
+    flex-direction: column;
+    div{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding: 1%;
     }
 }
