--- a/src/components/Partials/Form/Form.scss
+++ b/src/components/Partials/Form/Form.scss
@@ -1,3 +1,5 @@
+// @import '../';
+
 #SeatSeaction{
     display: flex;
     flex-direction: column;
@@ -8,3 +10,31 @@
         padding: 1%;
     }
 }
+
+
+//BREAKPOINTS
+// $x-large: 1300px;
+// $large: 1300px;
+// $tablet: 980px;
+// $mobile: 580px;
+
+// @media screen and (min-width: $x-large) {
+//     body{
+//       background-color: $bg-blue;
+//     }
+//   }
+// @media screen and (max-width: $large) {
+//     body{
+//       background-color: $bg-red;
+//     }
+//   }
+// @media screen and (max-width: $tablet) {
+//   body{
+//     background-color: $bg-yellow;     
+//   }
+// }
+// @media screen and (max-width: $mobile){
+//     body{
+//     background-color: $bg-green;  
+//     }
+// }
