--- a/src/components/pages/Events/Review.scss
+++ b/src/components/pages/Events/Review.scss
@@ -168,6 +168,7 @@ $mobile: 580px;
         }
     }
     #FormWrapper{
+        margin-bottom: 0;
         #PostReviewForm{
             fieldset{
                 .CommentDiv{
